Lists are dynamic and can be added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,700"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="stylesheet" href="./assets/stylesheets/styles.css">
     <title>Mello</title>
   </head>
   <body>
@@ -30,36 +30,11 @@
 
           <header><h1>My Board</h1></header>
           <div class="container">
-            <div class="list">
-                <header><button>To Do</button></header>
-                <ul>
-                  <li><button>Build awesome front-end apps</button></li>
-                  <li><button>Get hired</button></li>
-                </ul>
-                <button>Add a card...</button>
-              </div>
-              <div class="list">
-                <header><button>In Progress</button></header>
-                <ul>
-                  <li><button>Learn JavaScript</button></li>
-                  <li><button>Build Trello Clone</button></li>
-                </ul>
-                <button>Add a card...</button>
-              </div>
-              <div class="list">
-                <header><button>Done</button></header>
-                <ul>
-                  <li><button>Learn Ruby</button></li>
-                  <li><button>Learn Rails</button></li>
-                  <li><button>Learn HTML</button></li>
-                  <li><button>Learn CSS</button></li>
-                </ul>
-                <button>Add a card...</button>
-              </div>
-              <div class="list add">
-                <button>+ Add another list</button>
-              </div>
+            
           </div>
       </div>
+
+      <script src="./assets/js/board.js"></script>
+      <script src="./assets/js/app.js"></script>
   </body>
 </html>
